# homelab-tools

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  build-agents.sh  shared.py
.github/workflows/: build-and-push.yml
Archive/agent-eval/: README.md  temp_output.py
agent-data-patrol/: Dockerfile  compare.py  patrol.py  pyproject.toml  run-patrol.sh
agent-eval/: README.md  cli.py  task.md
agent-eval/experiments/: blog_creation_baseline.yaml  context_degradation_profiling.yaml  hardware_context_profiling.yaml  high_throughput_vuln_scan.yaml  mas_triage_swarm.yaml  media_generation_prompts.yaml  mob_of_experts.yaml  multi_agent_alert_triage.yaml  multi_agent_blog_gen.yaml  multi_agent_refactor.yaml  refactor_bash.yaml  sre_otel_instrumentation.yaml  sre_vision_benchmark.yaml  standup-eval.yaml
agent-eval/results/: Multi_GPU_Vision_Performance_Test_20260525_150020.json  Multi_GPU_Vision_Performance_Test_20260525_150418.json  (+6 more)
agent-media-health/: health.py  pyproject.toml  run-health.sh
agent-network-sentinel/: .gitignore  known-devices.example.json  pyproject.toml  run-sentinel.sh  sentinel.py
agent-sre-patrol/: patrol.py  pyproject.toml  run-patrol.sh
agent-standup/: README.md  benchmark.sh  go.mod  go.sum  judge.py  main.go  python_fanout.py  run-standup.sh
agent-status/: README.md  agent_status.py  config.example.yaml  main.py  pyproject.toml  roadmap_parser.py
agent-storage-report/: Dockerfile  pyproject.toml  report.py  run-report.sh
agent-vision-patrol/: patrol.py  pyproject.toml  run-patrol.sh
prompt-optimizer/: Dockerfile  README.md  optimize.py  requirements.txt
(+37 files in other folders)
