[project]
name = "agent-data-patrol"
version = "0.1.0"
description = "Data patrol agent — z-score anomaly detection over Prometheus metrics, Loki logs, and Phoenix traces."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mcp>=1.27.1",
    "openai>=1.0.0",
    "python-dotenv>=1.2.2",
]
