[project]
name = "agent-storage-report"
version = "0.1.0"
description = "Weekly homelab storage capacity report — collects array metrics, projects fill dates, diffs against RAG snapshot, generates a markdown report."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.13.5",
    "mcp>=1.27.1",
    "openai>=2.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.2.2",
]
